# lab002

./: mag.txt  main.py  pyproject.toml  test.txt
