[tool.poetry]
name = "lab02"
version = "0.1.0"
description = ""
authors = ["Damian Waląg <damianwalag99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
imageio = "^2.22.2"
rich = "^12.6.0"

[tool.poetry.group.dev.dependencies]
scipy = "^1.9.3"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
